Rework api surface: admin, donor appt. note
