# frontend/openapi/openapi.json
@@ -144,7 +144,7 @@
         }
       }
     },
-    "/admin/bloodbank/admins/add": {
+    "/admin/bloodbank/{bloodbank_id}/admin/add": {
       "post": {
         "tags": [
           "admin"
@@ -152,15 +152,26 @@
         "summary": "Add Admin To Bloodbank",
         "description": "Add another admin to a blood bank the logged in user is administrator for",
         "operationId": "add_admin_to_bloodbank",
+        "parameters": [
+          {
+            "name": "bloodbank_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Bloodbank Id"
+            }
+          }
+        ],
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/MutateBloodbankAdminsRequest"
               }
             }
-          },
-          "required": true
+          }
         },
         "responses": {
           "200": {
@@ -184,7 +195,7 @@
         }
       }
     },
-    "/admin/bloodbank/admins/remove": {
+    "/admin/bloodbank/{bloodbank_id}/admin/remove": {
       "delete": {
         "tags": [
           "admin"
@@ -192,15 +203,26 @@
         "summary": "Remove Admin From Bloodbank",
         "description": "Remove an admin from a blood bank the logged in user is administrator for\n\nThe user can remove themselves.\nThe user can't remove the last admin of a blood bank.",
         "operationId": "remove_admin_from_bloodbank",
+        "parameters": [
+          {
+            "name": "bloodbank_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Bloodbank Id"
+            }
+          }
+        ],
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/MutateBloodbankAdminsRequest"
               }
             }
-          },
-          "required": true
+          }
         },
         "responses": {
           "200": {
@@ -224,7 +246,7 @@
         }
       }
     },
-    "/admin/bloodbank/{bloodbank_id}/appointments": {
+    "/admin/bloodbank/{bloodbank_id}/appointment": {
       "get": {
         "tags": [
           "admin"
@@ -297,8 +319,208 @@
                   "items": {
                     "$ref": "#/components/schemas/BookingSlotType"
                   },
-                  "title": "Response Bloodbank Appointments Admin Bloodbank  Bloodbank Id  Appointments Get"
+                  "title": "Response Bloodbank Appointments Admin Bloodbank  Bloodbank Id  Appointment Get"
                 }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/admin/appointment/{appointment_id}/note": {
+      "post": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "Appointment Add Note",
+        "operationId": "appointment_add_note",
+        "parameters": [
+          {
+            "name": "appointment_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Appointment Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AppointmentNote"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/admin/appointment/{appointment_id}/donation": {
+      "post": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "Appointment Register Donation",
+        "operationId": "appointment_register_donation",
+        "parameters": [
+          {
+            "name": "appointment_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Appointment Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DonationInfo"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/admin/donor/{donor_id}/form/interview": {
+      "post": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "Register Interview",
+        "operationId": "register_interview",
+        "parameters": [
+          {
+            "name": "donor_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Donor Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/InterviewForm"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/admin/donor/{donor_id}/form/donation-test": {
+      "post": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "Register Donation Test",
+        "operationId": "register_donation_test",
+        "parameters": [
+          {
+            "name": "donor_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Donor Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DonationTestForm"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
               }
             }
           },
@@ -386,6 +608,53 @@
         }
       }
     },
+    "/appointment/{appointment_id}/note": {
+      "post": {
+        "summary": "Add Note",
+        "operationId": "add_note",
+        "parameters": [
+          {
+            "name": "appointment_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Appointment Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AppointmentNote"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/bookingslot/available": {
       "get": {
         "summary": "Get Available",
@@ -449,6 +718,19 @@
   },
   "components": {
     "schemas": {
+      "AppointmentNote": {
+        "properties": {
+          "message": {
+            "type": "string",
+            "title": "Message"
+          }
+        },
+        "type": "object",
+        "required": [
+          "message"
+        ],
+        "title": "AppointmentNote"
+      },
       "AppointmentType": {
         "properties": {
           "appointment_id": {
@@ -657,6 +939,53 @@
         ],
         "title": "CreateBloodBankRequest"
       },
+      "DonationInfo": {
+        "properties": {
+          "amount_ml": {
+            "type": "number",
+            "title": "Amount Ml"
+          },
+          "is_blood_not_plasma": {
+            "type": "boolean",
+            "title": "Is Blood Not Plasma",
+            "default": true
+          }
+        },
+        "type": "object",
+        "required": [
+          "amount_ml"
+        ],
+        "title": "DonationInfo"
+      },
+      "DonationTestForm": {
+        "properties": {
+          "submitted_at": {
+            "type": "string",
+            "format": "date-time",
+            "title": "Submitted At"
+          },
+          "ok_to_donate": {
+            "type": "boolean",
+            "title": "Ok To Donate"
+          },
+          "validity_duration": {
+            "type": "string",
+            "format": "duration",
+            "title": "Validity Duration"
+          },
+          "donation_id": {
+            "type": "integer",
+            "title": "Donation Id"
+          }
+        },
+        "type": "object",
+        "required": [
+          "ok_to_donate",
+          "validity_duration",
+          "donation_id"
+        ],
+        "title": "DonationTestForm"
+      },
       "GetAllBloodBanksRow": {
         "properties": {
           "name": {
@@ -798,6 +1127,30 @@
         "type": "object",
         "title": "HTTPValidationError"
       },
+      "InterviewForm": {
+        "properties": {
+          "submitted_at": {
+            "type": "string",
+            "format": "date-time",
+            "title": "Submitted At"
+          },
+          "ok_to_donate": {
+            "type": "boolean",
+            "title": "Ok To Donate"
+          },
+          "validity_duration": {
+            "type": "string",
+            "format": "duration",
+            "title": "Validity Duration"
+          }
+        },
+        "type": "object",
+        "required": [
+          "ok_to_donate",
+          "validity_duration"
+        ],
+        "title": "InterviewForm"
+      },
       "LoginRequestData": {
         "properties": {
           "email": {
@@ -818,10 +1171,6 @@
       },
       "MutateBloodbankAdminsRequest": {
         "properties": {
-          "bloodbank_id": {
-            "type": "integer",
-            "title": "Bloodbank Id"
-          },
           "admin_id": {
             "type": "integer",
             "title": "Admin Id"
@@ -829,7 +1178,6 @@
         },
         "type": "object",
         "required": [
-          "bloodbank_id",
           "admin_id"
         ],
         "title": "MutateBloodbankAdminsRequest"
